feat: Add comprehensive documentation for team structure, project performance, security measures, testing strategy, and data protection compliance
- Created 'equipe.mdx' to outline team roles and project management tools.
- Added 'performances.mdx' detailing current performance metrics and scalability strategies.
- Introduced 'securite.mdx' covering security protocols and GDPR compliance.
- Developed 'tests.mdx' to describe testing philosophy, coverage, and CI/CD practices.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,40 +1,57 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
+title: Mindlet - Documentation Technique
+description: Documentation technique complète du projet Mindlet - Application d'apprentissage intelligent et collaboratif
+template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Rapport de projet Master Informatique - Parcours Développement Full Stack - Université de Corse
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logo.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Découvrir le projet
+      link: /introduction/presentation/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: Architecture technique
+      link: /architecture/overview/
+      icon: document
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## 🎓 Projet Universitaire
+
+Cette documentation constitue le **rapport technique complet** du projet Mindlet, développé dans le cadre du **Master Informatique - Parcours Développement Full Stack** à l'Université de Corse.
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Présentation du projet" icon="star">
+		Découvrez Mindlet, l'application d'apprentissage intelligent qui transforme vos contenus en outils pédagogiques interactifs grâce à l'IA.
 	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
+	<Card title="Architecture technique" icon="setting">
+		Une architecture hybride moderne combinant React Native, Laravel, et des services cloud Kubernetes pour une scalabilité optimale.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Intelligence Artificielle" icon="rocket">
+		LangChain, LangGraph et des modèles propriétaires pour la génération de contenu pédagogique personnalisé.
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Équipe & Méthodologie" icon="add-document">
+		Organisation agile, gestion de projet avec GitHub Projects, et collaboration efficace au sein d'une équipe pluridisciplinaire.
 	</Card>
 </CardGrid>
+
+## 📅 Chronologie du projet
+
+| Période | Étape clé |
+|---------|-----------|
+| **Septembre 2025** | Prototype initial développé durant le M1 |
+| **Octobre-Novembre 2025** | Migration vers architecture hybride cloud |
+| **Novembre 2025** | Lauréats nationaux du concours PEPITE France 🏆 |
+| **Décembre 2025** | Lancement beta et retours utilisateurs |
+| **Janvier 2026** | Pivot vers le marché B2B |
+
+## 🔗 Liens utiles
+
+- **Site web** : [mindlet.app](https://www.mindlet.app)
+- **GitHub** : [github.com/mindlet-app](https://github.com/mindlet-app)
+
+---
+
+*Auteurs : Mehdi Ghoulam & Anthony Menghi - Janvier 2026*
