--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Mindlet - Documentation Technique
 description: Documentation technique complète du projet Mindlet - Application d'apprentissage intelligent et collaboratif
 template: splash
 hero:
-  tagline: Rapport de projet Master Informatique - Parcours Développement Full Stack - Université de Corse
+  tagline: Rapport de projet Master 2 Informatique - Parcours Développement Full Stack - Università di Corsica Pasquale Paoli
   image:
     file: ../../assets/logo.png
   actions:
