--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,7 +20,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## 🎓 Projet Universitaire
 
-Cette documentation constitue le **rapport technique complet** du projet Mindlet, développé dans le cadre du **Master Informatique - Parcours Développement Full Stack** à l'Université de Corse.
+Cette documentation constitue le **rapport technique complet** du projet Mindlet, développé dans le cadre du **Master 2 Informatique - Parcours Développement Full Stack** à l'Université de Corse.
 
 <CardGrid stagger>
 	<Card title="Présentation du projet" icon="star">
