--- a/src/content/docs/introduction/histoire.mdx
+++ b/src/content/docs/introduction/histoire.mdx
@@ -10,10 +10,10 @@ import { Aside, Badge, Steps } from '@astrojs/starlight/components';
 # 📖 Notre histoire
 
 <Aside type="note">
-  Ce document retrace le parcours du projet Mindlet, de sa conception à aujourd'hui. Un véritable journal de bord de notre aventure entrepreneuriale étudiante.
+  Ce document retrace le parcours du projet Mindlet, durant ce semestre de Master 2. Un véritable journal de bord de notre aventure entrepreneuriale étudiante.
 </Aside>
 
-## 🌱 Les origines (Septembre 2025)
+## 🌱 Point de départ (Septembre 2025)
 
 En septembre 2025, nous disposions d'un **prototype fonctionnel** de notre application Mindlet, développé tout au long de notre année de **Master 1**.
 
@@ -62,12 +62,14 @@ Notre nouvelle architecture cible intègre des technologies modernes et scalable
 | **Backend** | API Laravel (hébergée sur Kubernetes) |
 | **Service IA** | LangChain, LangGraph, services cloud |
 | **Base de données** | PostgreSQL (cloud managed) |
-| **Base vectorielle** | Qdrant |
-| **Stockage objets** | MinIO (cloud) |
+| **Base vectorielle** | Qdrant Cloud |
+| **Stockage objets** | Hetzner Cloud storage (S3 compatible) |
 
 ## 🏆 Concours PEPITE France
 
 Notre statut d'**étudiant entrepreneur** nous a permis de participer au **concours PEPITE France**.
+
+![Concours PEPITE](../../../assets/prix-pepite-2025.jpg)
 
 <Badge text="30 lauréats nationaux" variant="success" size="large" />
 
@@ -75,7 +77,7 @@ Cette distinction a été une expérience incroyablement enrichissante et motiva
 
 ## 🤔 Les défis et questionnements
 
-En parallèle de notre développement technique, de nombreuses questions se sont posées :
+En parallèle de notre développement, de nombreuses questions se sont posées :
 
 ### Défis techniques
 - Déploiement sur les stores mobiles (App Store, Google Play)
