--- a/src/content/docs/introduction/presentation.mdx
+++ b/src/content/docs/introduction/presentation.mdx
@@ -10,12 +10,12 @@ import { Aside, Badge, Card, CardGrid } from '@astrojs/starlight/components';
 # 🚀 Qu'est-ce que Mindlet ?
 
 <Aside type="tip">
-  Visitez notre site web : [mindlet.app](https://www.mindlet.app)
+  Visitez notre site web : [www.mindlet.app](https://www.mindlet.app)
 </Aside>
 
 **Mindlet** est une application d'apprentissage intelligent et collaboratif qui transforme vos cours, vidéos, sites web ou documents en supports interactifs pour apprendre plus vite et durablement.
 
-Grâce à l'intelligence artificielle, Mindlet analyse vos contenus, en extrait les notions essentielles et les convertit automatiquement en **quiz**, **flashcards**, **QCM**, **jeux** ou **cartes mentales**.
+Grâce à l'intelligence artificielle, Mindlet analyse vos contenus, en extrait les notions essentielles et les convertit automatiquement en **flashcards**, **QCM**, **jeux**, **cartes mentales** et plus encore !
 
 ## ✨ Une nouvelle façon d'apprendre
 
@@ -87,11 +87,12 @@ Mindlet propose une variété de formats pour s'adapter à tous les styles d'app
 
 Voici un aperçu de l'interface de Mindlet :
 
-![Écran d'accueil](../../../assets/app-screenshots/IMG_1398.PNG)
-
-![Liste des collections](../../../assets/app-screenshots/IMG_1399.PNG)
-
-![Mode révision](../../../assets/app-screenshots/IMG_1400.PNG)
+![Écran d'accueil](../../../assets/screenshots/accueil.png)
+![Écran statistiques](../../../assets/screenshots/statistiques.png)
+![Liste des collections](../../../assets/screenshots/mes-collections.png)
+![Mode révision](../../../assets/screenshots/mode-revision.png)
+![Session - Flashcards](../../../assets/screenshots/flashcard.png)
+![Session - Catégories](../../../assets/screenshots/categories.png)
 
 ---
 
