--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -30,7 +30,7 @@ Cette documentation constitue le **rapport technique complet** du projet Mindlet
 		Une architecture hybride moderne combinant React Native, Laravel, et des services cloud Kubernetes pour une scalabilité optimale.
 	</Card>
 	<Card title="Intelligence Artificielle" icon="rocket">
-		LangChain, LangGraph et des modèles propriétaires pour la génération de contenu pédagogique personnalisé.
+		Mistral, LangGraph et des modèles open-source pour la génération de contenu pédagogique personnalisé.
 	</Card>
 	<Card title="Équipe & Méthodologie" icon="add-document">
 		Organisation agile, gestion de projet avec GitHub Projects, et collaboration efficace au sein d'une équipe pluridisciplinaire.
@@ -49,7 +49,7 @@ Cette documentation constitue le **rapport technique complet** du projet Mindlet
 
 ## 🔗 Liens utiles
 
-- **Site web** : [mindlet.app](https://www.mindlet.app)
+- **Site web** : [www.mindlet.app](https://www.mindlet.app)
 - **GitHub** : [github.com/mindlet-app](https://github.com/mindlet-app)
 
 ---
